--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageVehicleFor.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageVehicleFor.xaml
@@ -28,7 +28,7 @@
                 <TextBlock Text="Vehicle Plate Number"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
-                    FontWeight="ExtraBold"
+                    FontWeight="Bold"
                     FontFamily="Montserrat"
                     Margin="-32,86,166,0" Height="13" VerticalAlignment="Top"/>
 
@@ -43,7 +43,7 @@
                         FontSize="15"
                         TextAlignment="Left"
                         FontWeight="Medium"
-                        FontFamily="Montserrat"
+                        FontFamily="Century Gothic"
                         Foreground="Black"
                         CaretBrush="Gray"
                         BorderBrush="White"
@@ -61,7 +61,7 @@
                 <TextBlock Text="Vehicle Chasis Number"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
-                    FontWeight="ExtraBold"
+                    FontWeight="Bold"
                     FontFamily="Montserrat"
                     Margin="-32,167,202,0" Height="13" VerticalAlignment="Top"/>
 
@@ -75,7 +75,7 @@
                     <TextBox x:Name="txtV_ChassisNo"
                         FontSize="15"
                         FontWeight="Medium"
-                        FontFamily="Montserrat"
+                        FontFamily="Century Gothic"
                         TextAlignment="Left"
                         Foreground="Black"
                         CaretBrush="Gray"
@@ -94,7 +94,7 @@
                 <TextBlock Text="Vehicle Brand"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
-                    FontWeight="ExtraBold"
+                    FontWeight="Bold"
                     FontFamily="Montserrat"
                     Margin="286,86,74,0" Grid.ColumnSpan="2" Height="15" VerticalAlignment="Top"/>
 
@@ -108,7 +108,7 @@
                     <TextBox x:Name="txtV_Brand"
                         FontSize="15"
                         FontWeight="Medium"
-                        FontFamily="Montserrat"
+                        FontFamily="Century Gothic"
                         TextAlignment="Left"
                         Foreground="Black"
                         CaretBrush="Gray"
@@ -127,7 +127,7 @@
                 <TextBlock Text="Vehicle Model"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
-                    FontWeight="ExtraBold"
+                    FontWeight="Bold"
                     FontFamily="Montserrat"
                     Margin="-33,250,300,0" Height="13" VerticalAlignment="Top"/>
 
@@ -141,7 +141,7 @@
                     <TextBox x:Name="txtV_Model"
                         FontSize="15"
                         FontWeight="Medium"
-                        FontFamily="Montserrat"
+                        FontFamily="Century Gothic"
                         TextAlignment="Left"
                         Foreground="Black"
                         CaretBrush="Gray"
@@ -158,7 +158,7 @@
                 <TextBlock Text="Vehicle Type"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
-                    FontWeight="ExtraBold"
+                    FontWeight="Bold"
                     FontFamily="Montserrat"
                     Margin="-33,342,168,0" Height="15" VerticalAlignment="Top"/>
 
@@ -206,7 +206,7 @@
                 <TextBlock Text="Number of Passengers"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
-                    FontWeight="ExtraBold"
+                    FontWeight="Bold"
                     FontFamily="Montserrat"
                     Margin="286,167,37,0" Grid.ColumnSpan="2" Height="16" VerticalAlignment="Top"/>
 
@@ -220,7 +220,7 @@
                     <TextBox x:Name="No_of_Passengers"
                         FontSize="15"
                         FontWeight="Medium"
-                        FontFamily="Montserrat"
+                        FontFamily="Century Gothic"
                         TextAlignment="Left"
                         Foreground="Black"
                         CaretBrush="Gray"
@@ -239,7 +239,7 @@
                 <TextBlock Text="Vehicle Condition"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
-                    FontWeight="ExtraBold"
+                    FontWeight="Bold"
                     FontFamily="Montserrat"
                     Margin="285,250,85,0" Height="13" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
 
@@ -253,7 +253,7 @@
                     <TextBox x:Name="Vehicle_Condition"
                         FontSize="15"
                         FontWeight="Medium"
-                        FontFamily="Montserrat"
+                        FontFamily="Century Gothic"
                         TextAlignment="Left"
                         Foreground="Black"
                         CaretBrush="Gray"
@@ -338,7 +338,7 @@
                         Click="btnUpdate_Click" Height="47" Width="156" VerticalAlignment="Top" Grid.ColumnSpan="3" Background="Turquoise">
                         <Button.Style>
                             <Style TargetType="{x:Type Button}">
-                                <Setter Property="Background" Value="#71A4E1"/>
+                                <Setter Property="Background" Value="#FF40E0D0"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
                                         <Setter Property="Background" Value="#71A4E1"/>
@@ -370,7 +370,7 @@
                         Click="btnInsert__Click" Height="47" VerticalAlignment="Top" Grid.ColumnSpan="2" Margin="0,11,97,0" Background="#FF7AB3EF">
                         <Button.Style>
                             <Style TargetType="{x:Type Button}">
-                                <Setter Property="Background" Value="#71A4E1"/>
+                                <Setter Property="Background" Value="#FF7AB3EF"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
                                         <Setter Property="Background" Value="#71A4E1"/>
